# mksc

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  mks_node.c  mks_node.h
cmake/Modules/: FindLEMON.cmake  FindLLVM.cmake  FindRAGEL.cmake
include/: mks_enrichment.h  mks_node.h  mks_token.h  mks_type.h  parser_exports.h  string_utils.h  token.h
include/codegen/: module_codegen.h
include/utils/: ansi_colour.h  file_utils.h  log_utils.h  memory_utils.h  node_list.h  string_utils.h
src/: lexer.rl  main.c  mks.l  mks.y  mks_enrichment.c  mks_node.c  mks_token.c  mks_type.c  parser.y  string_utils.c
src/codegen/: module_codegen.c
src/utils/: file_utils.c  memory_utils.c  node_list.c  string_utils.c
tests/inference/: 01-test-primitives.typed  02-test-functions-curry.typed  03-test-lexical-scope.typed
tests/parsing/: 01-test-expression.syntax  01-test.syntax  02-test-assign.syntax  02-test.syntax  03-test-if-else-branch.syntax  03-test.syntax  04-test-do-block.syntax  05-test-function-call.syntax  06-test-function-declaration.syntax  07-test-import-statement.syntax  08-test-mode-export.syntax  09-test-strings.syntax  10-test-numbers.syntax  11-test-arrays.syntax  12-test-comments.syntax  13-test-tuples.syntax
